# ratatui.wasm

./: Cargo.toml  README.md
.github/workflows/: ci.yml  github_pages.yml
canvas-backend/: Cargo.toml
canvas-backend/src/: lib.rs
examples/calendar/: Cargo.toml  index.html  style.css
examples/calendar/src/: lib.rs
examples/scrollbar/: .gitignore  Cargo.toml
examples/scrollbar/src/: lib.rs
examples/table/: Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
examples/table/src/: lib.rs
