[package]
name = "canvas-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.74" }
js-sys = { version = "0.3.65" }
ratatui = { workspace = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'console',
    'ImageData',
    'DomRect',
    'CanvasGradient',
    'Path2d',
]
