[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
ratatui = { workspace = true, features = ["widget-calendar"] }
canvas-backend = { path = "../../canvas-backend" }
time = { version = "0.3.11", features = ["local-offset", "wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'DomRect',
  'KeyEvent',
  'KeyboardEvent',
]
