[package]
name = "scrollbar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
ratatui = { workspace = true }
itertools = "0.11"
canvas-backend = { path = "../../canvas-backend" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'DomRect',
  'KeyEvent',
  'KeyboardEvent',
]
